[project]
name = "banya-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail",email = "gavrilovm2705@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread (>=6.2.1,<7.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
